bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: not found: value finished
while (finished != true)
       ^BDR2:37: error: not found: value finished
  finished = true;
  ^