bdr.BDR2.scala.code
while (finished != true)
if (readMessage() == "R") {
  right();
  forward()} 
else if (readMessage() == "L") {
  left();
  forward()} 
else if (readMessage() == "I") {
  left()
  left()
  forward()}
else if (readMessage() == "A"){
  forward()}
else if (readMessage() == "B"){
  forward(2)}
else if (readMessage() == "C"){
  forward(3)}
else if (readMessage() == "D"){
  forward(4)}
else if (readMessage() == "E"){
  forward(5)}
else if (readMessage() == "F"){
  forward(6)}
else if (readMessage() == "Z"){
  backward()}
else if (readMessage() == "Y"){
  backward(2)}
else if (readMessage() == "X"){
  backward(3)}
else if (readMessage() == "W"){
  backward(4)}
else if (readMessage() == "V"){
  backward(5)}
else if (readMessage() == "U"){
  backward(6)}
else {
  finished = true;
}